# workflow-game

./: .gitignore  Cargo.toml  README.md  README_EN.md  README_RU.md  RPG战斗系统.L  RPG战斗系统.dist.L  build.ps1  build.sh
.github/workflows/: build.yml
docs/: BLOCK_DEVELOPMENT.md  BLOCK_DEVELOPMENT_EN.md  BLOCK_DEVELOPMENT_RU.md
scripts/debug/: logger.lua
scripts/event/: on_start.lua  print.lua
scripts/game/: attack.lua  character.lua  fireball.lua  game_start.lua  gold_collector.lua  inventory.lua  monster.lua  regeneration.lua  turn_controller.lua
scripts/input/: button.lua  password_input.lua  text_input.lua
scripts/lite/: armor.lua  boss.lua  gem_attack.lua  gem_crit.lua  gem_dodge.lua  gold.lua  hero.lua  skill.lua  weapon.lua
scripts/logic/: branch.lua  compare.lua  selector.lua
scripts/math/: add.lua  calc.lua  constant.lua  multiply.lua
scripts/usb/: bulk_transfer.lua  control_transfer.lua  device_info.lua  device_scanner.lua  test.lua
scripts/util/: logic.lua  math.lua  merger.lua  splitter.lua  switch.lua  value.lua
src/: app.rs  main.rs  player.rs
src/script/: loader.rs  mod.rs  parser.rs  registry.rs  types.rs  watcher.rs
src/ui/: block_widget.rs  canvas.rs  connection_widget.rs  layer_panel.rs  menu.rs  mod.rs  property_panel.rs
src/usb/: lua_bindings.rs  mod.rs  types.rs
src/workflow/: block.rs  clipboard.rs  connection.rs  executor.rs  graph.rs  group.rs  layer.rs  mod.rs  package.rs  storage.rs
workflows/: battle_demo.L  lite_rpg_demo.L  rpg_battle.L  usb_demo.L
workflows/Lite RPG 放置游戏_publish/: Lite RPG 放置游戏.lpack
