[package]
name = "workflow_engine"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "workflow_engine"
path = "src/main.rs"

[[bin]]
name = "workflow_player"
path = "src/player.rs"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"

# Lua
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }

# 编码处理
encoding_rs = "0.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 文件监听(热重载)
notify = "7.0"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
log = "0.4"
env_logger = "0.11"
rfd = "0.16.0"
aes = "0.8.4"
cbc = "0.1.2"
rusb = "0.9.4"
